Fix: spacing on pose details page

--- a/src/app/components/pose-details/pose-details.component.scss
+++ b/src/app/components/pose-details/pose-details.component.scss
@@ -12,12 +12,14 @@
 
     .pose-name {
       font-size: 3rem;
+      margin: 25px 0 0 0;
     }
 
     .pose-img {
       height: 40vh;
       width: 40vw;
       min-width: 300px;
+      margin: 25px 0;
     }
 
     .sanskrit-name {
